--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -68,6 +68,8 @@
                     <option value="forever">Forever</option>
                 </select>
             </div>
+        </div>
+        <div class="form-row">
             <div class="form-group">
                 <label for="backup-location">Backup Location</label>
                 <select id="backup-location">
