--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -77,6 +77,7 @@
                 </select>
                 <div id="location-path" class="location-path"></div>
             </div>
+            <div class="form-group"></div>
         </div>
         <div class="form-row">
             <div class="form-group form-group-wide">
